--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <img class="img-fluid" src="/img/[removal.ai]_dc53dc64-dc9a-4aac-a91b-916b182ef76f-oig.png" alt="">
+                    <img class="img-fluid" src="/img/vinay2.png" alt="">
 
                 </div>
             </div>
