--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <img class="img-fluid" src="/img/Vinay2.png" alt="">
+                    <img class="img-fluid" src="img/Vinay2.png" alt="">
 
                 </div>
             </div>
