--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
             <div class="row g-4 portfolio-container wow fadeInUp" data-wow-delay="0.1s">
                 <div class="col-lg-4 col-md-6 portfolio-item first">
                     <div class="portfolio-img rounded overflow-hidden">
-                        <img class="img-fluid" src="img/" alt="">
+                        <img class="img-fluid" src="img\Project-1.png" alt="">
                         <div class="portfolio-btn">
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-1.jpg"
                                 data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
