--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
                     <div class="portfolio-img rounded overflow-hidden">
                         <img class="img-fluid" src="img\Project-1.png" alt="">
                         <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-1.jpg"
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img\project-1.jpg"
                                 data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href=""><i
                                     class="fa fa-link"></i></a>
@@ -640,7 +640,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item second">
                     <div class="portfolio-img rounded overflow-hidden">
-                        <img class="img-fluid" src="img/project-2.jpg" alt="">
+                        <img class="img-fluid" src="img\project-2.jpg" alt="">
                         <div class="portfolio-btn">
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-2.jpg"
                                 data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
