--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                             <span></span>
                         </button>
                         <h5 class="ms-4 mb-0 d-none d-sm-block">Play Video</h5>
-                    </div>
+                    </div>s
                 </div>
                 <div class="col-lg-6">
                     <img class="img-fluid" src="img/Vinay2.png" alt="">
@@ -620,9 +620,9 @@
                 <div class="col-lg-6 text-lg-end">
                     <ul class="list-inline mx-n3 mb-0" id="portfolio-flters">
                         <li class="mx-3 active" data-filter="*">All Projects</li>
-                        <li class="mx-3" data-filter=".first">UI/UX Design</li>
-                        <li class="mx-3" data-filter=".second">Graphic Design</li>
-                        <li class="mx-3" data-filter=".second">Graphic Design</li>
+                        <li class="mx-3" data-filter=".first">ML Projects</li>
+                        <li class="mx-3" data-filter=".second">Web Projects</li>
+                        <li class="mx-3" data-filter=".second">React projects</li>
                     </ul>
                 </div>
             </div>
@@ -631,7 +631,7 @@
                     <div class="portfolio-img rounded overflow-hidden">
                         <img class="img-fluid" src="img\Project-1.png" alt="">
                         <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img\project-1.jpg"
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img\Project-1.png"
                                 data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href=""><i
                                     class="fa fa-link"></i></a>
@@ -640,9 +640,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item second">
                     <div class="portfolio-img rounded overflow-hidden">
-                        <img class="img-fluid" src="img/" alt="">
+                        <img class="img-fluid" src="img/Project-1.png" alt="">
                         <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img\project-2.jpg"
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/Project-1.png"
                                 data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href=""><i
                                     class="fa fa-link"></i></a>
@@ -653,7 +653,7 @@
                     <div class="portfolio-img rounded overflow-hidden">
                         <img class="img-fluid" src="img/project-3.jpg" alt="">
                         <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-3.jpg"
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/Project-1.png"
                                 data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href=""><i
                                     class="fa fa-link"></i></a>
@@ -662,9 +662,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item second">
                     <div class="portfolio-img rounded overflow-hidden">
-                        <img class="img-fluid" src="img/project-4.jpg" alt="">
+                        <img class="img-fluid" src="img/Project-1.png" alt="">
                         <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-4.jpg"
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/Project-1.png"
                                 data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href=""><i
                                     class="fa fa-link"></i></a>
@@ -673,9 +673,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item first">
                     <div class="portfolio-img rounded overflow-hidden">
-                        <img class="img-fluid" src="img/project-5.jpg" alt="">
+                        <img class="img-fluid" src="img/Project-1.png" alt="">
                         <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-5.jpg"
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/Project-1.png"
                                 data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href=""><i
                                     class="fa fa-link"></i></a>
@@ -684,9 +684,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item second">
                     <div class="portfolio-img rounded overflow-hidden">
-                        <img class="img-fluid" src="img/project-6.jpg" alt="">
+                        <img class="img-fluid" src="img/project-1.jpg" alt="">
                         <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-6.jpg"
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-1jpg"
                                 data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href=""><i
                                     class="fa fa-link"></i></a>
@@ -713,7 +713,7 @@
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item position-relative">
-                        <img class="img-fluid rounded" src="img/team-1.jpg" alt="">
+                        <img class="img-fluid rounded" src="img/Vinay2.png" alt="">
                         <div class="team-text bg-white rounded-end p-4">
                             <div>
                                 <h5>Full Name</h5>
@@ -725,7 +725,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item position-relative">
-                        <img class="img-fluid rounded" src="img/team-2.jpg" alt="">
+                        <img class="img-fluid rounded" src="img/Vinay2.png" alt="">
                         <div class="team-text bg-white rounded-end p-4">
                             <div>
                                 <h5>Full Name</h5>
@@ -737,7 +737,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item position-relative">
-                        <img class="img-fluid rounded" src="img/team-3.jpg" alt="">
+                        <img class="img-fluid rounded" src="img/Vinay2.png" alt="">
                         <div class="team-text bg-white rounded-end p-4">
                             <div>
                                 <h5>Full Name</h5>
@@ -840,14 +840,14 @@
             </div>
             <div class="row g-5">
                 <div class="col-lg-5 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <p class="mb-2">My office:</p>
-                    <h3 class="fw-bold">123 Street, New York, USA</h3>
+                    <p class="mb-2"></p>
+                    <h3 class="fw-bold">Nagpur ,Maharashtra</h3>
                     <hr class="w-100">
                     <p class="mb-2">Call me:</p>
-                    <h3 class="fw-bold">+012 345 6789</h3>
+                    <h3 class="fw-bold">+91 9112315687</h3>
                     <hr class="w-100">
                     <p class="mb-2">Mail me:</p>
-                    <h3 class="fw-bold">info@example.com</h3>
+                    <h3 class="fw-bold">vinayambatkar57@gmail.com</h3>
                     <hr class="w-100">
                     <p class="mb-2">Follow me:</p>
                     <div class="d-flex pt-2">
@@ -872,8 +872,8 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="form-floating">
-                                    <input type="email" class="form-control" id="email" placeholder="Your Email">
-                                    <label for="email">Your Email</label>
+                                    <input type="email" class="form-control" id="email" placeholder="vinayambatkar57@gmail.com">
+                                    <label for="email">vinayambatkar57@gmail.com </label>
                                 </div>
                             </div>
                             <div class="col-12">
@@ -906,7 +906,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    &copy; <a class="border-bottom text-secondary" href="#">Your Site Name</a>, All Right Reserved.
+                    &copy; <a class="border-bottom text-secondary" href="#">Vinay Ambatkar</a>, All Right Reserved.
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
@@ -924,6 +924,7 @@
 
 
     <!-- JavaScript Libraries -->
+    
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/wow/wow.min.js"></script>
@@ -934,9 +935,9 @@
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="lib/isotope/isotope.pkgd.min.js"></script>
     <script src="lib/lightbox/js/lightbox.min.js"></script>
+    
 
 
-    <!-- Template Javascript -->
     <script src="js/main.js"></script>
 </body>
 
