--- a/index.html
+++ b/index.html
@@ -293,11 +293,15 @@
         <div class="shareSocial">
             <h3 class="socialTitle">Connect with me</h3>
             <ul class="socialList">
-                <li><a href=""> <i class="fa-brands fa-linkedin"></i></a></li>
+                 <!-- <li><a href=""> <i class="fa-brands fa-linkedin"></i></a></li>
                 <li><a href=""><i class="fa-brands fa-twitter"></i></a></li>
                 <li><a href=""><i class="fa-solid fa-envelope"></i></a></li>
                 <li><a href=""><i class="fa-brands fa-github"></i></a></li>
-                <li><a href=""><i class="fa-brands fa-whatsapp"></i></a></li>
+                <li><a href=""><i class="fa-brands fa-whatsapp"></i></a></li> -->
+                <a class="btn btn-square btn-primary me-2" href=""><i class="fab fa-twitter"></i></a>
+                <a class="btn btn-square btn-primary me-2" href=""><i class="fab fa-facebook-f"></i></a>
+                <a class="btn btn-square btn-primary me-2" href=""><i class="fab fa-youtube"></i></a>
+                <a class="btn btn-square btn-primary me-2" href=""><i class="fab fa-linkedin-in"></i></a>
             </ul>
         </div>
         <div class="shareLink">
