--- a/index.html
+++ b/index.html
@@ -217,6 +217,12 @@
                 }
             }
         }
+        .Connect-1{
+            font-size: 20px;
+            font-weight: bold;
+            margin-top: 20px;
+
+        }
     </style>
 </head>
 
@@ -288,20 +294,17 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div><center class="Connect-1">Connect with me</center>
     <div class="shareArticle">
         <div class="shareSocial">
-            <h3 class="socialTitle">Connect with me</h3>
-            <ul class="socialList">
-                 <!-- <li><a href=""> <i class="fa-brands fa-linkedin"></i></a></li>
-                <li><a href=""><i class="fa-brands fa-twitter"></i></a></li>
-                <li><a href=""><i class="fa-solid fa-envelope"></i></a></li>
-                <li><a href=""><i class="fa-brands fa-github"></i></a></li>
-                <li><a href=""><i class="fa-brands fa-whatsapp"></i></a></li> -->
-                <a class="btn btn-square btn-primary me-2" href=""><i class="fab fa-twitter"></i></a>
-                <a class="btn btn-square btn-primary me-2" href=""><i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-square btn-primary me-2" href=""><i class="fab fa-youtube"></i></a>
-                <a class="btn btn-square btn-primary me-2" href=""><i class="fab fa-linkedin-in"></i></a>
+            
+                <div class="d-flex pt-2">
+                    <a class="btn btn-square btn-primary me-2" href=""><i class="fab fa-github"></i></a>
+                    <a class="btn btn-square btn-primary me-2" href=""><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-square btn-primary me-2" href=""><i class="bi bi-envelope"></i></a>
+                    <a class="btn btn-square btn-primary me-2" href=""><i class="bi bi-instagram"></i></a>
+                    
+                </div>
             </ul>
         </div>
         <div class="shareLink">
