--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                     <h2 class="typed-text-output d-inline"></h2>
                     <div class="typed-text d-none">Front-End Developer, Freelancer, Web Devloper, AI/ML Dev</div>
                     <div class="d-flex align-items-center pt-5">
-                        <a href="" class="btn btn-primary py-3 px-4 me-5">Download CV</a>
+                        <a href="https://drive.google.com/file/d/15caFZtwZ7dFjOidBVc2guT20oEArpM7B/view?usp=drivesdk" class="btn btn-primary py-3 px-4 me-5" target="_blank">Download CV</a>
                         <button type="button" class="btn-play" data-bs-toggle="modal"
                             data-src="https://www.youtube.com/watch?v=5k58kWEuwJQ&list=RD5k58kWEuwJQ&start_radio=1"
                             data-bs-target="#videoModal">
