--- a/index.html
+++ b/index.html
@@ -302,10 +302,10 @@
         <div class="shareSocial">
 
             <div class="d-flex pt-2">
-                <a class="btn btn-square btn-primary me-2" href=""><i class="fab fa-github"></i></a>
-                <a class="btn btn-square btn-primary me-2" href=""><i class="fab fa-linkedin-in"></i></a>
+                <a class="btn btn-square btn-primary me-2" href="https://github.com/VinayAmbatkar" target="_blank"><i class="fab fa-github"></i></a>
+                <a class="btn btn-square btn-primary me-2" href="https://www.linkedin.com/in/vinay-ambatkar-a55308206/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                 <a class="btn btn-square btn-primary me-2" href="#contact"><i class="bi bi-envelope"></i></a>
-                <a class="btn btn-square btn-primary me-2" href=""><i class="bi bi-instagram"></i></a>
+                <a class="btn btn-square btn-primary me-2" href="https://www.instagram.com/vinay_ambatkar/" target="_blank"><i class="bi bi-instagram"></i></a>
 
             </div>
             </ul>
@@ -679,10 +679,8 @@
                     <div class="portfolio-img rounded overflow-hidden">
                         <img class="img-fluid" src="img/diceprojects.png" alt="">
                         <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/Regro.jpg"
-                                data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href=""><i
-                                    class="bi bi-github"></i></a>
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://vinayambatkar.github.io/Dice_Rollup_React/" target="_blank"><i class="fa fa-eye"></i></a>
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://github.com/VinayAmbatkar/Dice_Rollup_React" target="_blank"><i class="bi bi-github"></i></a>
                         </div>
                     </div>
                 </div>
@@ -690,9 +688,8 @@
                     <div class="portfolio-img rounded overflow-hidden">
                         <img class="img-fluid" src="img/Bharat_Art.jpg" alt="">
                         <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/Bharat_Art.jpg"
-                                data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href=""><i
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://vinayambatkar.github.io/Bharat_-Art/"><i class="fa fa-eye"></i></a>
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://github.com/VinayAmbatkar/Bharat_-Art"><i
                                     class="bi bi-github"></i></a>
                         </div>
                     </div>
@@ -701,9 +698,8 @@
                     <div class="portfolio-img rounded overflow-hidden">
                         <img class="img-fluid" src="img/Regro.jpg" alt="">
                         <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/Project-1.png"
-                                data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href=""><i
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://regro.000webhostapp.com/" target="_blank"><i class="fa fa-eye"></i></a>
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://github.com/VinayAmbatkar/ReGro/tree/master/ReGro" target="_blank"><i
                                     class="bi bi-github"></i></a>
                         </div>
                     </div>
@@ -712,9 +708,8 @@
                     <div class="portfolio-img rounded overflow-hidden">
                         <img class="img-fluid" src="img/heatwave.png" alt="">
                         <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/heatwave.png"
-                                data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href=""><i
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://colab.research.google.com/drive/1HBo-5nzgCra4PZZdNdCVTZwRb2BIjtfs" target="_blank"><i class="fa fa-eye"></i></a>
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://youtu.be/VYJsUKLsn5Q" target="_blank"><i
                                     class="bi bi-github"></i></a>
                         </div>
                     </div>
@@ -723,9 +718,8 @@
                     <div class="portfolio-img rounded overflow-hidden">
                         <img class="img-fluid" src="img/Cognition.png" alt="">
                         <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/Cognition.png"
-                                data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href=""><i
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://vinayambatkar.github.io/Cognition-_Academy-Website-/"><i class="fa fa-eye"></i></a>
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://github.com/VinayAmbatkar/Cognition-_Academy-Website-" target="_blank"><i
                                     class="bi bi-github"></i></a>
                         </div>
                     </div>
@@ -960,7 +954,6 @@
                     &copy; <a class="border-bottom text-secondary" href="#">Vinay Ambatkar</a>, All Right Reserved.
                 </div>
                 <div class="col-md-6 text-center text-md-end">
-                    <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
                     Designed By Vinay Ambtkar<a class="border-bottom text-secondary" target="_blank"></a>
                 </div>
             </div>
@@ -992,4 +985,4 @@
     <script src="js/main.js"></script>
 </body>
 
-    </html>
+                        </html>
