--- a/index.html
+++ b/index.html
@@ -664,6 +664,7 @@
             <div class="row g-5 mb-5 align-items-center wow fadeInUp" data-wow-delay="0.1s">
                 <div class="col-lg-6">
                     <h1 class="display-5 mb-0">My Projects💡</h1>
+                    <p>If  you see the project was overlap then Please </p><mark style="background-color: yellow; text-decoration: underline;"><a style="text-decoration: underline;" href="#project">Click Hear</a></mark>
                 </div>
                 <div class="col-lg-6 text-lg-end">
                     <ul class="list-inline mx-n3 mb-0" id="portfolio-flters">
@@ -985,4 +986,4 @@
     <script src="js/main.js"></script>
 </body>
 
-                        </html>
+    </html>
