--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="row g-3 mb-4">
                         <div class="col-sm-6">
-                            <img class="img-fluid rounded" src="img/profile-pic (7).png" alt="">
+                            <img class="img-fluid rounded" src="img/47278088299.png" alt="">
                         </div>
                         <div class="col-sm-6">
                             <img class="img-fluid rounded" src="img/" alt="">
@@ -511,8 +511,8 @@
                                 <div class="col-sm-6">
                                     <h5>Frontend Devloper<br> Intern</h5>
                                     <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2021 - 2023</p>
-                                    <h6 class="mb-0">I Base Software Pvt Lmt</h6>
+                                    <p class="text-primary mb-1">2024 - Present</p>
+                                    <h6 class="mb-0">Avalanche Hi-Tech Enterprise</h6>
                                 </div>
                                 <!-- <div class="col-sm-6">
                                     <h5></h5>
